# latex_document_template

./: CMakeLists.txt  LICENSE  README.md  document.tex  functions.tex  references.bib
